# MachineManager

./: .gitignore  CLAUDE.md  build_bridge.bat  package-lock.json  package.json  start.bat  tsconfig.web.json
.claude/: settings.local.json
camera-bridge/: bridge.py  build.bat  cam1_meltpool.xml  cam2_buildplate.xml  log.txt  requirements.txt  test_directshow.py  test_ethernet_cam.py  test_ipc.py  test_ipc2.py  test_ipc3.py  test_ipc_debug.py  test_ipc_find.py  test_ipc_simple.py  test_ipc_start.py  test_ipc_v2.py  test_launch_and_connect.py  test_mf_capture.py  test_opencv.py  test_pix_dll.py  test_pix_dll2.py  test_pix_dll3.py  test_pix_final.py  test_pix_fixed_path.py  test_sdk.py
camera-bridge-cpp/: CMakeLists.txt  test-viewer.html
camera-bridge-cpp/include/: CallbackHandler.h  FramerateCounter.h  IRCalibrationManager.h  IRDeviceDS.h  IRDeviceParams.h  IRImager.h  IRImagerClient.h  IRLogger.h  ImageBuilder.h  VideoCapture.h
camera-bridge-cpp/lib/: libirimager.lib
camera-bridge-cpp/src/: CameraWorker.cpp  CameraWorker.h  CommandReader.h  EthernetCameraWorker.h  FrameMetadata.h  OtcCameraWorker.h  WebSocketServer.h  main.cpp
plc/: FB_JogAxis.TcPOU  GVL_MachineManager.TcGVL  MAIN_JogSection.st
src/main/: index.ts
src/main/ipc/: ads-handlers.ts  camera-handlers.ts  gcode-handlers.ts  recording-handlers.ts
src/main/services/: ads-client.ts  camera-bridge.ts  recording-service.ts  settings-store.ts
src/preload/: index.ts
src/renderer/: env.d.ts  index.html
src/renderer/components/ambrell/: AmbrellConnectionBar.tsx  AmbrellControls.tsx  AmbrellDashboardWidget.tsx  AmbrellPidPanel.tsx  AmbrellReadouts.tsx
src/renderer/components/analysis/: AxisGraph.tsx  GcodeViewer.tsx  PlaybackTimeline.tsx  RecordingBrowser.tsx  ReplayCamera.tsx
src/renderer/components/camera/: CameraControlPanel.tsx  CameraFeed.tsx  (+2 more)
src/renderer/hooks/: useAdsConnection.ts  useAxisPosition.ts  usePlaybackEngine.ts
src/renderer/pages/: AmbrellPage.tsx  AnalysisPage.tsx  BuildPlateScanPage.tsx  DashboardPage.tsx  GcodePage.tsx  HeatedBedPage.tsx  JogPage.tsx  SettingsPage.tsx  VariablesPage.tsx
src/renderer/stores/: ambrellStore.ts  heatedBedStore.ts  machineStore.ts  recordingStore.ts
src/renderer/styles/: globals.css
src/renderer/types/: machine.ts
(+19 files in other folders)
